@@ -26,14 +26,14 @@ public class FFMTest20 {
             FunctionDescriptor.of(JAVA_LONG, ADDRESS));
 
         // 3. Convert Java String to C string and store it in off-heap memory
-        try (Arena offHeap = Arena.openConfined()) {
-            MemorySegment str = offHeap.allocateUtf8String("Happy Coding!");
-
-            // 4. Invoke the foreign function
-            long len = (long) strlen.invoke(str);
-
-            System.out.println("len = " + len);
-        }
+//        try (Arena offHeap = Arena.openConfined()) {
+//            MemorySegment str = offHeap.allocateUtf8String("Happy Coding!");
+//
+//            // 4. Invoke the foreign function
+//            long len = (long) strlen.invoke(str);
+//
+//            System.out.println("len = " + len);
+//        }
         // 5. Off-heap memory is deallocated at end of try-with-resources
     }
 }
